header logo komplett

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* .App-header {
-  color: #007cc3;
+  color: #0000000;
   background-color: white;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -16,7 +16,7 @@
 }
 
 #HeaderText {
-  color: #007cc3;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 700;
 }
