--- a/src/Styles.css
+++ b/src/Styles.css
@@ -12,20 +12,18 @@
     text-align: center;
     min-height: 100vh;
     background-color: #f0f0f0;
-    position: relative; /* Hinzugefügt */
+    position: relative; /* Added */
 }
 
-
 .App-header {
-    color: #007cc3;
-    background-color: white;
+    background-color: #FFFFFF; /* Black background */
+    color: #000000; /* White text color */
     font-size: calc(10px + 2vmin);
-    color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #007cc3;
+    border-bottom: 1px solid #000000; /* White border line */
     height: 60px;
 }
 
@@ -35,7 +33,7 @@
 }
 
 .HeaderText {
-    color: #007cc3;
+    color: #000000; /* Ensure text inside HeaderText is white */
     font-size: 18px;
     font-weight: 700;
 }
@@ -44,10 +42,10 @@ footer {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    color: #007cc3;
+    color: #000000;
     background-color: white;
     padding: 4px 0px;
-    border-top: 1px solid #007cc3;
+    border-top: 1px solid #000000;
     display: flex;
     justify-content: space-between;
 }
