--- a/src/Styles.css
+++ b/src/Styles.css
@@ -10,21 +10,21 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
     background-color: #f0f0f0;
-    position: relative; /* Added */
+    position: relative;
+    padding: 0; /* Remove padding */
 }
 
 .App-header {
-    background-color: #FFFFFF; /* Black background */
-    color: #000000; /* White text color */
+    background-color: #FDE70E;
+    color: #000000;
     font-size: calc(10px + 2vmin);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #000000; /* White border line */
-    height: 60px;
+    border-bottom: 1px solid #000000;
+    height: 70px;
 }
 
 #DropdownWrapper {
@@ -33,7 +33,7 @@
 }
 
 .HeaderText {
-    color: #000000; /* Ensure text inside HeaderText is white */
+    color: #000000;
     font-size: 18px;
     font-weight: 700;
 }
@@ -43,11 +43,12 @@ footer {
     bottom: 0px;
     width: 100%;
     color: #000000;
-    background-color: white;
-    padding: 4px 0px;
-    border-top: 1px solid #000000;
+    background-color: #FDE70E;
+    border-top: 2px solid #000000;
     display: flex;
     justify-content: space-between;
+    height: 65px;
+    padding: 0; /* Remove padding */
 }
 
 #LogoutButton {
@@ -84,4 +85,24 @@ footer {
 #Username {
     min-width: 300px;
     text-align: right;
+}
+
+/* Footer Styling */
+.FooterContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 65px;
+    background-color: #FDE70E;
+    border-top: 2px solid #000000;
+}
+
+.Logo {
+    height: 40px;
+    margin-left: 20px;
+}
+
+.FooterText {
+    color: #000000;
+    font-size: 16px;
 }
