--- a/src/Styles.css
+++ b/src/Styles.css
@@ -74,8 +74,17 @@ footer {
     position: absolute;
     bottom: 5px;
     right: 10px;
-    font-size: 0.75em;
+    font-size: 0.85em;
     color: #000000;
+}
+
+.footer-text {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 1.1em;
+    flex-grow: 1;
+    width: 100%;
 }
 
 
@@ -118,7 +127,7 @@ footer {
 
 .FooterContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 65px;
     background-color: #E7F6FF;
